--- a/web/index.html
+++ b/web/index.html
@@ -13,50 +13,34 @@
       --accent: #10b981;
       --coach: #2563eb;
       --jongere: #f59e0b;
+      --danger: #ef4444;
     }
-    body {
-      margin: 0; padding: 0;
-      background: var(--bg); color: var(--text);
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      line-height: 1.45;
-    }
-    header {
-      padding: 16px 20px; background: #0b1220; border-bottom: 1px solid #1f2937;
-      position: sticky; top: 0; z-index: 5;
-    }
+    body { margin: 0; padding: 0; background: var(--bg); color: var(--text); font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; line-height: 1.45; }
+    header { padding: 16px 20px; background: #0b1220; border-bottom: 1px solid #1f2937; position: sticky; top: 0; z-index: 5; }
     header h1 { margin: 0; font-size: 18px; }
     main { max-width: 980px; margin: 0 auto; padding: 20px; }
-    .card {
-      background: var(--panel); border: 1px solid #1f2937; border-radius: 12px; padding: 16px; margin-bottom: 16px;
-    }
+    .card { background: var(--panel); border: 1px solid #1f2937; border-radius: 12px; padding: 16px; margin-bottom: 16px; }
     .row { display: flex; gap: 12px; align-items: center; flex-wrap: wrap; }
     .row > * { flex-shrink: 0; }
     input[type="file"] { color: var(--muted); }
     label { color: var(--muted); font-size: 12px; }
-    button {
-      background: var(--accent); color: #0b1220; border: 0; padding: 10px 14px; border-radius: 10px;
-      font-weight: 600; cursor: pointer;
-    }
+    button { background: var(--accent); color: #0b1220; border: 0; padding: 10px 14px; border-radius: 10px; font-weight: 600; cursor: pointer; }
     button:disabled { opacity: .6; cursor: not-allowed; }
+    .btn-red { background: var(--danger); }
+    .small { font-size: 12px; color: var(--muted); }
+    .two-col { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
+    @media (max-width: 820px) { .two-col { grid-template-columns: 1fr; } }
     .chat { display: flex; flex-direction: column; gap: 10px; margin-top: 8px; }
-    .bubble {
-      display: inline-block; max-width: 80%;
-      padding: 10px 12px; border-radius: 12px;
-      background: #1f2937; border: 1px solid #283241;
-      position: relative;
-    }
+    .bubble { display: inline-block; max-width: 80%; padding: 10px 12px; border-radius: 12px; background: #1f2937; border: 1px solid #283241; position: relative; }
     .bubble .meta { font-size: 12px; color: var(--muted); margin-bottom: 4px; display: flex; align-items: center; gap: 8px; }
-    .chip {
-      display: inline-flex; align-items: center; gap: 6px; border-radius: 999px; padding: 2px 8px; font-size: 12px; color: #0b1220; font-weight: 700;
-    }
+    .chip { display: inline-flex; align-items: center; gap: 6px; border-radius: 999px; padding: 2px 8px; font-size: 12px; color: #0b1220; font-weight: 700; }
     .chip.coach { background: var(--coach); }
     .chip.jongere { background: var(--jongere); }
     .words { margin-top: 6px; }
     .word { padding: 2px 4px; margin: 0 2px 2px 0; border-radius: 6px; display: inline-block; background: #0b1220; border: 1px dashed #334155; }
     .word:hover { border-style: solid; }
-    .small { font-size: 12px; color: var(--muted); }
-    .two-col { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; }
-    @media (max-width: 820px) { .two-col { grid-template-columns: 1fr; } .bubble { max-width: 100%; } }
+    .pill { font-size: 12px; padding: 4px 8px; border-radius: 999px; border: 1px solid #334155; color: var(--muted); }
+    audio { width: 100%; margin-top: 6px; }
   </style>
 </head>
 <body>
@@ -67,12 +51,19 @@
   <main>
     <section class="card">
       <h3>1) Enroll coach voice</h3>
-      <p class="small">Upload a 30–60s WAV with the coach speaking. This saves a local embedding for constrained diarization.</p>
-      <div class="row">
+      <p class="small">Upload <em>or record</em> a 30–60s WAV with the coach speaking. This saves a local embedding for constrained diarization.</p>
+      <div class="row" style="margin-bottom:8px">
         <input id="enroll-wav" type="file" accept=".wav,audio/wav" />
-        <button id="btn-enroll">Enroll Coach</button>
-        <span id="enroll-status" class="small"></span>
+        <button id="btn-enroll-file">Enroll (file)</button>
+        <span class="pill" id="enroll-status"></span>
       </div>
+      <div class="row">
+        <button id="btn-rec-enroll">🎙️ Record</button>
+        <button id="btn-stop-enroll" class="btn-red" disabled>Stop</button>
+        <button id="btn-enroll-rec" disabled>Enroll (recording)</button>
+        <span class="small" id="enroll-rec-hint">Mic → WAV (mono) created in browser</span>
+      </div>
+      <audio id="enroll-audio" controls></audio>
     </section>
 
     <section class="card">
@@ -81,16 +72,28 @@
         <div>
           <div class="row" style="margin-bottom:8px">
             <input id="trans-wav" type="file" accept=".wav,audio/wav" />
-            <button id="btn-trans">Transcribe</button>
-            <span id="trans-status" class="small"></span>
+            <button id="btn-trans-file">Transcribe (file)</button>
+            <span class="pill" id="trans-status"></span>
           </div>
-          <div class="row">
+          <div class="row" style="margin-bottom:8px">
+            <button id="btn-rec-trans">🎙️ Record</button>
+            <button id="btn-stop-trans" class="btn-red" disabled>Stop</button>
+            <button id="btn-trans-rec" disabled>Transcribe (recording)</button>
+          </div>
+          <audio id="trans-audio" controls></audio>
+          <div class="row" style="margin-top:8px">
             <label>Language:
               <select id="language">
                 <option value="nl" selected>Dutch (nl)</option>
                 <option value="en">English (en)</option>
               </select>
             </label>
+            <label for="max_speakers">Max non-coach speakers:</label>
+              <select id="max_speakers">
+                <option value="1" selected>1 (Coach + 1 other → “Jongere”)</option>
+                <option value="2">2 (Coach + 2 others)</option>
+                <option value="3">3 (Coach + 3 others)</option>
+              </select>
             <label>Coach threshold:
               <input id="thr" type="number" step="0.01" value="0.72" style="width:90px" />
             </label>
@@ -98,22 +101,18 @@
               <input id="wordts" type="checkbox" checked />
             </label>
           </div>
-        </div>
-        <div>
-          <div class="small">
+          <div class="small" style="margin-top:6px">
             <strong>Notes</strong><br/>
             • All processing is local. No data leaves your device.<br/>
             • If you didn't enroll, the system will still cluster speakers.<br/>
             • Threshold ↑ → stricter coach match; try 0.68–0.78 if needed.
           </div>
         </div>
+        <div>
+          <div id="meta" class="small"></div>
+          <div id="chat" class="chat"></div>
+        </div>
       </div>
-    </section>
-
-    <section class="card">
-      <h3>Output</h3>
-      <div id="meta" class="small"></div>
-      <div id="chat" class="chat"></div>
     </section>
   </main>
 
